--- a/public/views/profile-view.html
+++ b/public/views/profile-view.html
@@ -87,7 +87,7 @@
         <section class="section projects-section">
             <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
             <div class="item" data-ng-repeat="item in model.projects">
-                <span class="project-title"><a href="#hook"><b>{{item.title}}</b></a></span> (<span class="technologies">{{item.technologies.join(", ")}}</span>)
+                <span class="project-title"><a href="javascript:void(0);"><b>{{item.title}}</b></a></span> (<span class="technologies">{{item.technologies.join(", ")}}</span>)
                 <br/>
                 <br/>
                  <span class="project-tagline">{{item.description}}</span>
