Fixing vulneravilities and typos

--- a/public/views/profile-view.html
+++ b/public/views/profile-view.html
@@ -76,7 +76,7 @@
 
         <section class="section experiences-section">
             <h2 class="section-title"><i class="fa fa-briefcase"></i>Experience</h2>
-            <div class="item" data-ng-repeat="item in model.experiencies">
+            <div class="item" data-ng-repeat="item in model.experiences">
                 <div class="meta">
                     <div class="upper-row">
                         <h3 class="job-title">{{item.jobTitle}}</h3>
