--- a/public/css/main.css
+++ b/public/css/main.css
@@ -100,7 +100,7 @@ p {
   font-size: 14px;
 }
 .sidebar-wrapper .container-block {
-  padding: 30px;
+  padding: 20px;
 }
 .sidebar-wrapper .container-block-title {
   text-transform: uppercase;
@@ -185,10 +185,9 @@ p {
   padding-top: 8px;
   font-size: 16px;
   position: relative;
-  top: -2px;
 }
 .main-wrapper .section {
-  margin-bottom: 60px;
+  margin-bottom: 40px;
 }
 .main-wrapper .experiences-section .item {
   margin-bottom: 30px;
@@ -297,4 +296,12 @@ p {
 
 span.technologies{
   font-size: 12px;
+}
+
+.page-container {
+  min-height: 92vh;
+  padding-bottom: 15px;
+  position: relative;
+  page-break-after: always;
+  page-break-inside: avoid;
 }
