Change styles of button

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -306,3 +306,10 @@ span.technologies{
 .link-url {
   color: #337ab7 !important;
 }
+
+.btn-download {
+  background-color: #6c92a3;
+}
+.btn-download:hover{
+  color: #fff
+}
