--- a/public/views/profile-view.html
+++ b/public/views/profile-view.html
@@ -5,6 +5,8 @@
             <img class="profile" data-ng-src="{{model.profileImage}}" alt="" />
             <h1 class="name">{{model.name}}</h1>
             <h3 class="tagline">{{model.title}}</h3>
+            <br />
+            <button class="btn btn-download" ng-click="download()">Download</button>
         </div>
         <div class="contact-container container-block">
             <ul class="list-unstyled contact-list">
