--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,7 +13,8 @@ body {
   color: #545E6C;
   background: #f5f5f5;
   font-size: 14px;
-  padding: 30px;
+  padding-top: 30px;
+  width: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -299,7 +300,7 @@ span.technologies{
 }
 
 .page-container {
-  min-height: 70vh;
+  min-height: 95vh;
   padding-bottom: 15px;
 }
 
