--- a/public/views/profile-view.html
+++ b/public/views/profile-view.html
@@ -1,8 +1,7 @@
 <div data-ng-init="init()">
     <div class="sidebar-wrapper">
-      <div class="page-container">
+      <div>
         <div class="profile-container">
-            <img class="profile" data-ng-src="{{model.profileImage}}" alt="" />
             <h1 class="name">{{model.name}}</h1>
             <h3 class="tagline">{{model.title}}</h3>
             <br />
@@ -43,7 +42,7 @@
             </div>
         </div>
       </div>
-      <div class="page-container">
+      <div>
         <div class="languages-container container-block">
             <h2 class="container-block-title">Languages</h2>
             <ul class="list-unstyled interests-list">
