--- a/public/views/profile-view.html
+++ b/public/views/profile-view.html
@@ -5,7 +5,7 @@
             <h1 class="name">{{model.name}}</h1>
             <h3 class="tagline">{{model.title}}</h3>
             <br />
-            <button class="btn btn-download" ng-click="download()">Download</button>
+            <button id='download-button' style="visibility: hidden" class="btn btn-download" ng-click="download()">Download</button>
         </div>
         <div class="contact-container container-block">
             <ul class="list-unstyled contact-list">
@@ -71,11 +71,8 @@
         <section class="skills-section section">
           <h2 class="section-title"><i class="fa fa-rocket"></i>Skills</h2>
           <div class="skillset" data-ng-repeat="item in model.skills track by item.name">
-              <div class="item">
-                  <h3 class="level-title">{{item.name}}</h3>
-                  <div class="level-bar">
-                      <level-bar level="item.level"></level-bar>
-                  </div>
+              <div class="chip">
+                    {{item.name}}
               </div>
           </div>
         </section>
@@ -94,6 +91,14 @@
                     <p>
                         {{item.description}}
                     </p>
+                    <div ng-if="item.achievements">
+                        <b>Achievements</b>
+                        <ul>
+                            <li data-ng-repeat="achievement in item.achievements">
+                                {{achievement}}
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
